Prevent long text from overflowing .card
Added overflow hidden to .card class to prevent text from extending beyond the edges of the box.

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -144,6 +144,7 @@ nav .btn {
   transition: box-shadow .25s;
   border-radius: 2px;
   box-shadow: 0px 0px 3px rgba(0,0,0,0.2),0 1px 2px rgba(0,0,0,0.1);
+  overflow: hidden;
 }
 
 .card-no-style {
